<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen">
    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/navy"
      android:title="@string/app_name"
      android:titleTextColor="@color/white" />
    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/posts"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingTop="8dp"
      android:paddingBottom="88dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <TextView
      android:id="@+id/empty"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:padding="32dp"
      android:text="@string/feed_empty"
      android:textAlignment="center"
      android:textColor="@color/text_secondary" />
    <ProgressBar
      android:id="@+id/progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:visibility="gone" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/newPost"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_margin="20dp"
      android:contentDescription="@string/new_post"
      android:src="@android:drawable/ic_menu_camera"
      app:backgroundTint="@color/amber"
      app:tint="@color/navy" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
